umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclopentane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 5
    topology: DpK
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
