umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclopropane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["0" "2" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#h2#v2"} :bonds [["0" "1" "1"] ["1" "2" "1"] ["0" "2" "1"]] :charge 0 :spin "#u0 #s1"}}}
