umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_cyclopropene.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h2#v2"
    bonds:
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "C#h#v3"
      - "C#h#v3"
      - "C#h2#v2"
    bonds:
      - "="
      - "-"
      - "-"
