umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_isobutane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: hydrocarbons
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{CHv3}"
      - "{CH3v1}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{CHv3}"
      - "{CH3v1}"
      - "{CH3v1}"
      - "{CH3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
